--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.83.0",
     "axios": "^1.10.0",
     "firebase": "^11.10.0",
+    "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -25,6 +26,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
+    "recharts": "^3.1.0",
     "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.11"
   },
