--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@stripe/stripe-js": "^7.5.0",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.83.0",
+    "aos": "^2.3.4",
     "axios": "^1.10.0",
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.6",
