--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@material-tailwind/react": "^2.1.10",
+    "@shadcn/ui": "^0.0.4",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.5.0",
     "@tailwindcss/vite": "^4.1.11",
@@ -29,7 +30,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
-    "recharts": "^3.1.0",
+    "recharts": "^3.1.2",
     "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.11"
   },
